framec_tests/language_specific/c/v3_facade_smoke/negative/wrapper_unbalanced_paren.frm
@target c

system S {
    machine:
        $A {
            e() {
                __frame_transition('B'(;
            }
        }
}

